# musicalmacaw

./: README.md  pyproject.toml
src/musicalmacaw/: __init__.py  calculator.py  cli.py  logging_config.py  timezone_detection.py  timezone_utils.py
src/musicalmacaw/parsers/: __init__.py  android.py  base.py  generic.py  iphone.py
