[project]
name = "musicalmacaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
musicalmacaw = "musicalmacaw:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
preview = true

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "ASYNC1",
  "S",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "FIX",
  "ERA",
  "PD",
  "PL",
  "C",
  "R",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "RUF",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
